Fix wrong color of sub text in completed block

--- a/react/src/styles/App.module.scss
+++ b/react/src/styles/App.module.scss
@@ -1551,6 +1551,10 @@ a {
             opacity: 0.45;
         }
 
+        & .block--lecture-group__elem__texts__sub {
+            color: rgba($color-text-lighter, 0.35);
+        }
+
         & > .block__completed-text {
             display: initial;
         }
